# mitoc-trips

./: .coveragerc  .dockerignore  .envrc  .gitignore  .isort.cfg  .pylintrc  .tool-versions  .travis.yml  Brewfile  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  bower.json  compose.yaml  entrypoint.sh  index.fcgi  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements-dev-top-level.txt  requirements-dev.txt  requirements-top-level.txt  requirements.txt  runtests.py
.github/workflows/: ci.yml
frontend/: Dockerfile  jest.config.js  package-lock.json  package.json  vue.config.js
frontend/src/: ajax.test.ts  ajax.ts  filters.test.ts  filters.ts  identify_base_components.test.ts  identify_base_components.ts  main.ts
frontend/src/components/: LogOut.test.ts  LogOut.vue  MembershipStatus.test.ts  MembershipStatus.vue
frontend/src/modules/: dateutil.test.ts  dateutil.ts
frontend/src/tests/: util.test.ts  util.ts
mit_oidc/: apps.py  provider.py  urls.py  views.py
ws/: __init__.py  api_views.py  apps.py  auth.py  car_states.py  celery.py  celery_config.py  cleanup.py  context_processors.py  dateutils.py  decorators.py  enums.py  feeds.py  fields.py  forms.py  icons.py  lottery.py  membership.py  merge.py  message_generators.py  middleware.py  mixins.py  models.py  perm_utils.py  privacy.py  routers.py  sao.py  sentry.py  settings.py  signup_utils.py  social.py  storage.py  tasks.py  test_icons.py  unsubscribe.py  urls.py  views.py  waivers.py  widgets.py  wimp.py  (+1 more)
ws/conf/: dev_settings_template.py  environments.py  local.env  local_settings.py  production_settings.py  production_settings_template.py  test_settings.py
ws/email/: approval.py  renew.py  sao.py  sole.py  trips.py
ws/fixtures/: ws.json
ws/lottery/: __init__.py  graphs.py  handle.py  rank.py  run.py
ws/mailman/: __init__.py  api.py  request.py
ws/management/commands/: run_lottery.py
ws/messages/: __init__.py  leader.py  lottery.py  participant.py  security.py
ws/migrations/: 0001_initial.py  0001_initial_squashed_migration.py  0001_squashed_0021_restore_econtact_names_20160227_1345.py  0001_squashed_0056_car.py  0002_auto_20141031_1643.py  0002_car_year_and_feedback.py  0002_fix_max_length.py  0002_participant_profile_last_updated.py  0002_update_info_path.py  0003_auto_20141103_1440.py  0003_level_only_for_ws.py  0003_membershipstats.py  0003_trip_wimp.py  0004_cached_membership.py  0004_index_on_bools.py  0004_trip_allow_leader_signups.py  0005_markdown_helptext.py  0005_remove_participant_discounts_delete_discount.py  0005_trip_membership_required.py  0005_trip_worry_time.py  0006_add_ws_application_question.py  0006_auto_20150106_1950.py  0006_discounts.py  0006_participant_gravatar_opt_out.py  0007_add_groups.py  0007_auto_20150107_0033.py  0007_snazzy_trips.py  0007_target_blank_help_links.py  0008_auto_20150126_0903.py  0008_distinctaccounts.py  0008_remove_registration.py  0008_trip_let_participants_drop.py  0009_auto_20150127_1752.py  0009_chair_approval.py  0009_change_trip_form_labels.py  0009_unique_signups.py  0010_alumni_affiliation.py  0010_bump_default_version.py  0010_change_email_help_link.py  0010_remove_leaders_20151026_2106.py  (+99 more)
ws/signals/: __init__.py  auth_signals.py  signup_signals.py
ws/static/css/: footable.core.css  footable.standalone.css  layout.css
ws/static/js/: application.js  footable_breakpoints.js  ga.js  raven_config.js
ws/static/styles/: layout.css  main.css
ws/static/template/: admin-trip-signups-modal.html  admin-trip-signups.html  approve-trip.html  car-badge.html  delete-modal.html  delete-trip-modal.html  delete-trip.html  delete.html  edit-gravatar-modal.html  editable-signup-list.html  email-trip-members.html  flaking-participants.html  leader-select.html  membership-status.html  outstanding-rentals.html  participant-lookup.html  participant-select.html  signup-participant-modal.html  trip-rank.html  trips-by-leader.html
ws/templates/: 400.html  403.html  404.html  500.html  account_home.html  add_leader.html  add_or_create_trip.html  add_participant.html  add_trip.html  admin_trip.html  base.html  base_no_scripts.html  become_leader.html  cannot_edit_old_trip.html  contact.html  edit_trip.html  editable_signup_table.html  home.html  leaders.html  lecture_attendance.html  lottery_pair.html  manage_applications.html  manage_leaders.html  manage_participants.html  manage_trips.html  messages_page.html  noscript_footer.html  not_your_trip.html  participant_detail.html  readonly_form.html  review_trip.html  signup_table.html  trip_detail.html  trip_info.html  trip_itinerary.html  trip_medical.html  trip_preferences.html  trip_signup.html  trip_summary.html  update_info.html  (+6 more)
ws/templates/account/: email.html  (+7 more)
ws/templatetags/: application_tags.py  auth_tags.py  avatar_tags.py  content_tags.py  discount_tags.py  email_tags.py  form_tags.py  general_tags.py  gravatar.py  markdown_tags.py  medical_tags.py  membership_tags.py  merge_tags.py  messages_tags.py  messages_ul.py  misc_tags.py  perm_tags.py  readonly_form.py  rental_tags.py  signup_tags.py  trip_tags.py  ws_tags.py
ws/tests/: README.md  REAMDE.md  __init__.py  basic_geardb_schema.sql  conftest.py  factories.py  helpers.py  runner.py  test_auth.py  test_cleanup.py  test_connections.py  test_decorators.py  test_enums.py  test_forms.py  test_icons.py  test_lottery.py  test_merge.py  test_message_generators.py  test_middleware.py  test_mixins.py  test_privacy.py  test_settings.py  test_storage.py  test_tasks.py  test_unsubscribe.py  test_waivers.py  test_wimp.py  test_wsgi.py  webpack-stats.json
ws/users/: adapter.py
ws/utils/: api.py  avatar.py  dates.py  feedback.py  forms.py  geardb.py  itinerary.py  member_sheets.py  member_stats.py  membership.py  membership_api.py  model_dates.py  models.py  perms.py  ratings.py  signups.py  test_ratings.py
ws/views/: __init__.py  account.py  applications.py  duplicates.py  itinerary.py  leaders.py  mailman.py  membership.py  participant.py  preferences.py  privacy.py  signup.py  stats.py  trips.py  winter_school.py
(+223 files in other folders)
