[tool.black]
include = '\.py$'
# Don't attempt to normalize strings
# (Preserves the convention of "single quotes for data, double quotes for humans")
skip-string-normalization = true

[tool.ruff]
select = [
  "A",     # flake8-builtins
  "ANN",   # flake8-annotations
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except
  "C4",    # flake8-comprehensions
  "C90",   # mccabe
  "COM",   # flake8-commas
  "DJ",    # flake8-django
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle error
  "TD",    # flake8-todos
  "EXE",   # flake8-executable
  "F",     # Pyflakes
  "FA",    # flake8-future-annotations
  "G",     # flake8-logging-format
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "INP",   # flake8-no-pep420
  "INT",   # flake8-gettext
  "ISC",   # flake8-implicit-str-concat
  "N",     # pep8-naming
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PLC",   # pylint convention
  "PLE",   # pylint error
  "PLR",   # pylint refactor
  "PLW",   # pylint warning
  "PT",    # flake8-pytest-style
  "PYI",   # flake8-pyi
  "RET",   # flake8-return
  "RSE",   # flake8-raise
  "RUF",   # Ruff-specific rules
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLF",   # flake8-self
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "TCH",   # flake8-type-checking
  "TID",   # flake8-tidy-imports
  "TRY",   # tryceratops
  "UP",    # pyupgrade
  "W",     # pycodestyle warning
  "YTT",   # flake8-2020

  # Interesting, should perhaps turn on later:
  # "D",    # pydocstyle
  # "PTH",  # flake8-use-pathlib
  # "FLY",  # flynt

  # Intentionally omitted:
  # "Q",     # flake8-quotes        -- we let black handle quotes.
  # "FBT",   # flake8-boolean-trap  -- I'm fine with boolean traps
  # "ERA",   # eradicate            -- has tons of false-positives on commented "code"
  # "EM",    # flake8-errmsg        -- I'm fine with strings directly in exceptions
  # "PD",    # pandas-vet           -- I don't use pandas
  # "NPY",   # NumPy-specific rules -- I don't use numpy
]

ignore = [
  # Specific rules ignored from checkers I otherwise view as valuable:
  "ANN001",   # Type annotations are knowingly incomplete.
  "ANN002",   # Type annotations are knowingly incomplete.
  "ANN003",   # Type annotations are knowingly incomplete.
  "ANN101",   # Type annotations are knowingly incomplete.
  "ANN102",   # Type annotations are knowingly incomplete.
  "ANN201",   # Type annotations are knowingly incomplete.
  "ANN202",   # Type annotations are knowingly incomplete.
  "ANN204",   # Type annotations are knowingly incomplete.
  "ANN205",   # Type annotations are knowingly incomplete.
  "ANN206",   # Type annotations are knowingly incomplete.
  "ANN401",   # Type annotations are knowingly incomplete.
  "ARG001",   # Unused arguments are common when inheriting with `*args, **kwargs`.
  "ARG002",   # Unused arguments are common when inheriting with `*args, **kwargs`.
  "COM812",   # Black manages commas.
  "D100",     # Not all public classes need docstrings.
  "D101",     # Not all public classes need docstrings.
  "D102",     # Not all public methods need docstrings.
  "D107",     # Not all `__init__` methods need docstrings.
  "E501",     # Black manages line length.
  "N806",     # Function arguments are frequently uppercase in migrations.
  "PLR2004",  # Tests & simple logic extensively use "magic values"
  "PT009",    # I intentionally use `unittest`-style tests.
  "PT019",    # I don't use pytest fixtures.
  "S101",     # Using `assert` is fine (I run with them enabled).
  "S311",     # I use RNGs but they're not for cryptography purposes.
  "TD002",    # This is a solo project -- I authored all the TODOs.
  "TD003",    # This is a solo project -- I don't track issues.
  "TRY003",   # I don't mind specifying messages in the exception raise.

  # Errors which I'll plan to fix soon:
  "B904",     # Use `raise from` to preserve context (also see TRY200)
  "PLR0913",  # Refactor functions with too many args
  "DJ001",    # Avoid nullable charfields
  "DJ006",    # Use fields instead of exclude with `ModelForm`
  "DJ008",    # Each model should declare `__str__`
  "G004",     # Logging should use lazy interpolation
  "N818",     # Use the Error suffix on error instances
  "SIM102",   # Use just one `if` statement
  "SIM105",   # Use `contextlib.suppress`
  "SIM117",   # Avoid repeated `with` statements
  "TRY200",   # Use `raise from` to preserve context (also see B904)
]

# By default, `ruff` will respect `.gitignore`
# However, we can/should be explicit about excluded directories for CI
exclude = [
  ".venv/",
  "node_modules/",
  "static/",
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.flake8-self]
ignore-names = [
  "_asdict",
  "_replace",
  "_fields",
  "_meta",
]

[tool.poetry]
name = "ws"
version = "0.1.0"
description = "The MIT Outing Club's trip management system"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://mitoc-trips.mit.edu"
repository = "https://github.com/DavidCain/mitoc-trips/"
authors = ["David Cain <davidjosephcain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
Django = "^3.2"
PyJWT = ">= 2.0.0"  # 2.0.0 changed the return type of `jwt.encode()`
beautifulsoup4 = "*"
celery = "^5.1"
django-allauth = ">= 0.41.0"  # See CVE-2019-19844
django-cors-headers = "*"
django-crispy-forms = "^1.12.0"
django-localflavor = "*"
django-phonenumber-field = { version = ">= 2.0", extras = ["phonenumberslite"] }
django-pipeline = "*"  # TODO: To eventually be replaced by webpack-loader
django-smtp-ssl = "*"
django-webpack-loader = "^1.1.0"  # Should maintain parity with frontend/package.json
gspread = "*"
markdown2 = "*"
mitoc-const = "^1.0.0"  # (1.0.0 includes type hints)
phonenumberslite = "*"
psycopg2 = "*"
pwned-passwords-django = "^1.6"  # Awaiting new release to fix ValueError
requests = "*"
sentry-sdk = "^1.3.1"
ruff = "^0.0.270"

[tool.poetry.dev-dependencies]
black = "*"
coverage = { version = "*" }
factory_boy = "*"
freezegun = "*"
lxml = "*"
pylint = "^2.8"
pytest = "*"
pytest-django = "*"
pytest-socket = "*"
responses = "*"

# Dependencies for static type checking
django-stubs = { version = "*" }
mypy = { version = "*"}
types-certifi = { version = "*" }
types-cryptography = { version = "*" }
types-requests = { version = "*" }

# Dependencies helpful for local development, not used otherwise
django-debug-toolbar = { version = "*" }
ipdb = { version = "*" }
jedi = { version = "*" }


[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]

# Better errors
pretty = true
show_error_codes = true
show_column_numbers = true

# Miscellaneous stricter settings
no_implicit_optional = true
strict_concatenate = true
strict_equality = true
strict_optional = true # (true by default)
warn_no_return = true # (true by default)
warn_unreachable = true
warn_unused_ignores = true

# Aspirational settings (can't turn on yet)
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#check_untyped_defs = true
#warn_return_any = true

# Settings that are way too strict for use with Django
#disallow_subclassing_any = true

[[tool.mypy.overrides]]
# Explicitly ignore imports that do not have type hints or library stubs
# Periodically, it's worth checking in to see which of these may have types later!
# (After dropping support for Python versions before 3.5, it's easy to just type annotate directly
module = [
    "allauth.*",
    "bs4",
    "celery.*",
    "debug_toolbar",
    "factory.*",
    "freezegun",
    "google.oauth2.*",
    "gspread",
    "kombu.*",
    "localflavor.*",
    "markdown2",
    "phonenumber_field.*",
    "phonenumbers",
    "pipeline.*",
    "pwned_passwords_django.*",

]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "ws.settings"


[tool.pylint.'MESSAGES CONTROL']
disable = [
  # Handled by black
  "format",

  "arguments-differ",
  "fixme",
  "invalid-name",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-public-methods",

  ################################
  # I might remove some of these #
  ################################
  "attribute-defined-outside-init",
  "duplicate-code",
  "no-member",
  "too-many-locals",

  ############################
  # I aspire to remove these #
  ############################
  "missing-docstring",
  "unused-argument",  # Currently quite common in method strings

  ####################################
  # We let ruff handle these instead #
  ####################################
  "protected-access",
  "ungrouped-imports",
  "wrong-import-position",

]

[tool.pylint.REPORTS]
reports = false
score = false

[tool.pylint.FORMAT]
max-module-lines = 2000


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "ws.settings"
filterwarnings = [
    "error",
    "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning",
    # This is issued by `django-pipeline`, itself deprecated
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    # Presently used by Google packages
    "ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning",
]
